--- a/curricula_first.html
+++ b/curricula_first.html
@@ -71,7 +71,7 @@
             <li class="container_of_class">
                 <h3>JavaScript実習<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>JavaScriptとは、簡単に言えば、ウェブページにインタラクティブな機能や動的コンテンツを追加する、
+                    <li><p>JavaScriptとは、簡単に言えば、ウェブページにインタラクティブな機能や動的コンテンツを追加して、
                         人気のスクリプト言語です。よく知られているJavaScriptコンテンツの例としては、フォーム、フォトギャラリー、
                         画像スライドショー、アニメーションなどがあります。<br>
                         <br>
@@ -87,9 +87,9 @@
                 <h3 class="last">Webアプリケーション制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last01">
                     <li><p>この授業では主にReactを用いてWebアプリケーションやデスクトップアプリケーションの作成方法を学習し、
-                        同時にNode.jsやそのエコシステムの利用方法を学習することを目的とする。<br>
+                        同時にNode.jsやそのエコシステムの利用方法を学習することを目的とします。<br>
                         <br>
-                        Reactを用いて簡単なWebアプリケーションやデスクトップアプリケーションを作成することが出来る。</p></li>
+                        Reactを用いて簡単なWebアプリケーションやデスクトップアプリケーションを作成することが出来ます。</p></li>
                     <li><img src="img/webapp.jpg" alt="React and Node.js LOGO"></li>
                 </ul>
             </li>
@@ -120,8 +120,8 @@
                 <h3>イラストレーション<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>基本的な描画・着彩表現の実践を通してイラストレーションの表現力を高めること、
-                        Web制作における視覚伝達の基礎力を体得することを目的とする。<br>
-                        提案するときに即時に下書きを描く時があって、イラストレーションで基礎の表現力を鍛える。
+                        Web制作における視覚伝達の基礎力を体得することを目的とします。<br>
+                        提案するときに即時に下書きを描く時があって、イラストレーションで基礎の表現力を鍛えます。
                         <br>
                         全ての授業の中に最も癒しの授業です。</p></li>
                     <li><img src="img/illustration.jpg" alt="イラストの授業講義"></li>
@@ -130,7 +130,7 @@
             <li class="container_of_class">
                 <h3>色彩演習<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>色彩検定3級の合格を目指し、色彩の基礎知識を身につけながら、デザインに活かせる色彩力を高める。<br>
+                    <li><p>色彩検定3級の合格を目指し、色彩の基礎知識を身につけながら、デザインに活かせる色彩力を高めます。<br>
                         <br>
                         授業で色を学ぶことができ、学ぶことでセンスがよくなり、大いに利用することができます。
                         色にはさまざまな特徴があり、理論や法則が明確に存在しています。そうした色のルールに従って色を選べば、
@@ -143,8 +143,8 @@
                 <ul>
                     <li><p>人間中心設計、デザイン思考の考え方に基づき、ユーザー観察、ユーザー調査の手法、
                         ユーザーに提供する新しい価値についてのアイデア手法、ペルソナ・シナリオ手法、
-                        ペーパープロトタイプよる評価手法などについて学ぶ。<br>
-                        PBL形式の授業で手法解説に続き学生自らが体験を通して発想方法を主体的に学ぶ。
+                        ペーパープロトタイプよる評価手法などについて学びます。<br>
+                        PBL形式の授業で手法解説に続き学生自らが体験を通して発想方法を主体的に学びます。
                         <br>
                         <br>
                         デザイン思考のフレームを理解し、UXUI設計に生かせるようになる。</p></li>
@@ -155,20 +155,20 @@
                 <h3>サイト設計<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>サイト設計における情報アーキテクチャの役割を理解した上で、
-                        クライアントとユーザー双方のニーズを満たしたWebサイトの企画および設計を行えることを目的とする。<br>
+                        クライアントとユーザー双方のニーズを満たしたWebサイトの企画および設計を行えることを目的とします。<br>
                         <br>
                         IA（インフォメーションアーキテクト）の知識を活かして適切にサイト全体の情報設計、
-                        画面設計を行う事が出来る。 調査やヒアリングから課題を抽出し、最適なUXDを見出しWebサイトの企画と設計に落とし込む事ができる。</p></li>
+                        画面設計を行う事が出来る。 調査やヒアリングから課題を抽出し、最適なUXDを見出しWebサイトの企画と設計に落とし込む事ができます。</p></li>
                     <li><img src="img/サイト設計01.jpg" alt="サイト設計のイメージ"></li>
                 </ul>
             </li>
             <li class="container_of_class">
                 <h3 class="last">写真撮影/映像演出技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last02">
-                    <li><p>カメラの基本原理を理解して目的応じた様々な場面での撮影方法を学習することを目的とする。<br>
+                    <li><p>カメラの基本原理を理解して目的応じた様々な場面での撮影方法を学習することを目的とします。<br>
                         <br>
-                        Web等に掲載する写真で物撮りや人物などを目的に応じて得たい写真を撮ることが出来る。 
-                        像制作の演出及び計画とカメラを使った動画の撮影と編集が出来る。</p></li>
+                        Web等に掲載する写真で物撮りや人物などを目的に応じて得たい写真を撮ることが出来ます。 
+                        像制作の演出及び計画とカメラを使った動画の撮影と編集が出来ます。</p></li>
                     <li><img src="img/写真撮影映像演出技法01.jpg" alt="写真撮影のイメージ"></li>
                 </ul>
             </li>
@@ -184,19 +184,19 @@
             <li class="container_of_class">
                 <h3>企画書作成/プレゼン<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>自分が考えていることを整理し言葉でまとめる力を身に着け、論理的に構成しそれを相手に効果的に伝えるための手法を習得する。<br>
+                    <li><p>自分が考えていることを整理し言葉でまとめる力を身に着け、論理的に構成しそれを相手に効果的に伝えるための手法を習得します。<br>
                         <br>
-                        企画書作成、プレゼンテーションの基本は依頼主にとっての「課題の発見」であり、「解決策の提案」であることを理解する。
-                        自分が考えて いることを的確に効果的 に伝えるためのコミュニケーションスキルを、主として演習により体得していく。</p></li>
+                        企画書作成、プレゼンテーションの基本は依頼主にとっての「課題の発見」であり、「解決策の提案」であることを理解します。
+                        自分が考えて いることを的確に効果的 に伝えるためのコミュニケーションスキルを、主として演習により体得していきます。</p></li>
                     <li><img src="img/企画書作成01.JPG" alt="企画書作成の流れ"></li>
                 </ul>
             </li>
             <li class="container_of_class">
                 <h3>就職リテラシー<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>就職試験における書類審査、面接等の準備を行い、自信を持って就職活動に取り組むことが出来ることを目的とする。<br>
+                    <li><p>就職試験における書類審査、面接等の準備を行い、自信を持って就職活動に取り組むことが出来ることを目的とします。<br>
 
-                        ワークショップ型演習授業形式にて、就職活動の際、企業の採用選考（書類選考、面接など）の対策を行うと共に、就職及び就職活動の意識付けを行う。<br>
+                        ワークショップ型演習授業形式にて、就職活動の際、企業の採用選考（書類選考、面接など）の対策を行うと共に、就職及び就職活動の意識付けを行います。<br>
                         <br>
                         授業で何回も自己認識の診断をして、自分のことを深く知ったら履歴書を書くのも楽になるに違いないです。</p></li>
                     <li><img src="img/就職01.png" alt="面接のイメージ"></li>
@@ -205,11 +205,11 @@
             <li class="container_of_class">
                 <h3>チーム制作I<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>チーム制作において、チームワークには何が必要であるのか。その中におけるメンバーの位置づけはどうあるべきかについて学習することを目的とする。<br>
+                    <li><p>チーム制作において、チームワークには何が必要であるのか。その中におけるメンバーの位置づけはどうあるべきかについて学習することを目的とします。<br>
                         <br>
                         チームワークについて、演習を通じた体験により深く理解し、体験演習の内容を振り返りながらまとめることができます。<br>
                         <br>
-                        たまに先輩たちと一緒のワークショップもあって、クラスメイトと先輩を仲良くできるいいチャンスである。</p></li>
+                        たまに先輩たちと一緒のワークショップもあって、クラスメイトと先輩を仲良くできるいいチャンスであります。</p></li>
                     <li><img src="img/チーム01.jpg" alt="チームワークのイメージ"></li>
                 </ul>
             </li>
@@ -217,10 +217,10 @@
                 <h3>Webデザイン技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>「ライティングスキルの習得」。Web業界のプロとして、また、
-                        ビジネスパースンとして必要な言葉によるコミュケーション能力を身に付ける。<br>
+                        ビジネスパースンとして必要な言葉によるコミュケーション能力を身に付けます。<br>
                         <br>
                         Webコンテンツのみならず企画書やポートフォリオなど、
-                        Webならびに広告関連業務にかかわるあらゆるタイプの文章が適切に書ける。<br>
+                        Webならびに広告関連業務にかかわるあらゆるタイプの文章が適切に書けます。<br>
                         <br>
                         デザインより色々なweb知識が得られる授業です。プロになるために用語やweb構造、
                         業界のことも大切にすべきです。</p></li>
@@ -233,7 +233,7 @@
                     <li><p>Web制作企業から実案件（クライアントの要求）を元に課題が掲示され、企画提案・Webサイト制作・
                         プレゼンテーションまでのWebワークフローを通して実務能力を学習し、企画・モックアップ、実装、
                         企業に向けて最終プレゼンテーションを行い、企業から指導を受けながらWebサイト制作を行い、
-                        商用のWebサイトを制作できる技術を身に着けることを目的とする。<br>
+                        商用のWebサイトを制作できる技術を身に着けることを目的とします。<br>
                         <br>
                         Webワークフローに従って<br>
                         １.企画立案できる<br>
