--- a/curricula_second.html
+++ b/curricula_second.html
@@ -58,7 +58,7 @@
             <li class="container_of_class">
                 <h3>サーバーサイドプログラミングI<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>高度なWebサイトを構築するためのサーバサイドスクリプティング言語PHPと共に、データベース技術を学習することを目的とする。<br>
+                    <li><p>高度なWebサイトを構築するためのサーバサイドスクリプティング言語PHPと共に、データベース技術を学習することを目的とします。<br>
                         <br>
                         ・PHPの基本制御構造やfunction文を使いプログラムを作成することができる。<br>
                         ・フォーム投稿を使用したサイトを作成することができる。<br>
@@ -69,7 +69,7 @@
             <li class="container_of_class">
                 <h3>サーバーサイドプログラミングII<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>高度なWebサイトを構築するためのサーバサイドスクリプティング言語PHPと共に、データベース技術を学習することを目的とする。<br>
+                    <li><p>高度なWebサイトを構築するためのサーバサイドスクリプティング言語PHPと共に、データベース技術を学習することを目的とします。<br>
                         <br>
                         1．Wordpressの仕組みが説明でき、CMSを利用したサイト制作が出来る。<br>
                         2．Laravelフレームワークの環境設定構築ができ、フレームワークを利用したサイトを制作することが出来る。<br>
@@ -80,10 +80,10 @@
             <li class="container_of_class">
                 <h3>Webアプリケーション制作II<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>主にフロントエンドの技術を用いてWebアプリやスマートフォンアプリの開発をする。<br>
-                        Reactを用いたSPA、コンポーネントによるUIの構築 、Firebase等のmBaasとの連携、Githubによるバージョン管理等を習得することを目的とする。<br>
+                    <li><p>主にフロントエンドの技術を用いてWebアプリやスマートフォンアプリの開発をします。<br>
+                        Reactを用いたSPA、コンポーネントによるUIの構築 、Firebase等のmBaasとの連携、Githubによるバージョン管理等を習得することを目的とします。<br>
                         <br>
-                        CLIから適切なnpmモジュールをインストールし自らアプリの開発環境を構築出来る。 フロントエンドの技術を用いてオリジナルのアプリを完成させる。 Web APIやmBaaS等を用いてアプリケーションの機能を適切に実装することが出来る。</p></li>
+                        CLIから適切なnpmモジュールをインストールし自らアプリの開発環境を構築出来る。 フロントエンドの技術を用いてオリジナルのアプリを完成させます。 Web APIやmBaaS等を用いてアプリケーションの機能を適切に実装することが出来る。</p></li>
                     <li><img src="img/github01.JPG" alt="Github LOGO"></li>
                 </ul>
             </li>
@@ -96,7 +96,7 @@
                         (4)コスト管理<br>
                         (5)運用管理などの役割と必要な技術を理解し、各ドキュメントの作成が出来る。<br>
                         <br>
-                        Webディレクターの役割と必要な技術を理解し、Webディレクターとして、実際の業務に活用出来る知識と技術を理解出来る</p></li>
+                        Webディレクターの役割と必要な技術を理解し、Webディレクターとして、実際の業務に活用出来る知識と技術を理解出来ます。</p></li>
                     <li><img src="img/director-web01.jpg" alt="directing のイメージ"></li>
                 </ul>
             </li>
@@ -113,7 +113,7 @@
                 <h3>Webライティング技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>「ライティングスキルの習得」。Web業界のプロとして、また、
-                        ビジネスパースンとして必要な言葉によるコミュケーション能力を身に付ける。<br>
+                        ビジネスパースンとして必要な言葉によるコミュケーション能力を身に付けます。<br>
                         <br>
                         Webライティングとは、自分が書いたコンテンツを、
                         読者が得たい情報が得やすい構成・文章にし、かつ検索エンジンが読み取りやすいように整え、
@@ -128,16 +128,16 @@
                         １.わかりやすい情報の伝達表現<br>
                         ２.ストーリーデザインを活用したデザイン提案について学ぶ。<br>
                         <br>
-                        情報デザイン検定の対策講座を通して、資格取得を目指す。そしてデザイン企画書を提案する。</p></li>
+                        情報デザイン検定の対策講座を通して、資格取得を目指す。そしてデザイン企画書を提案します。</p></li>
                     <li><img src="img/人間中心設計01.png" alt="人間中心設計のイメージ"></li>
                 </ul>
             </li>
             <li class="container_of_class">
                 <h3 class="last">広告デザイン<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last02">
-                    <li><p>広告コミュニケーションの本質的な役割や価値を知り、Web制作の実務に活かせるコミュニケーションデザイン力を身に付ける。<br>
+                    <li><p>広告コミュニケーションの本質的な役割や価値を知り、Web制作の実務に活かせるコミュニケーションデザイン力を身に付けます。<br>
                         <br>
-                        実務に就いた際、Webのみならずグラフィック、映像、イベントなども含めたトータルパッケージを企画立案出来る。</p></li>
+                        実務に就いた際、Webのみならずグラフィック、映像、イベントなども含めたトータルパッケージを企画立案出来ます。</p></li>
                     <li><img src="img/webADs01.jpg" alt="web Ads イメージ"></li>
                 </ul>
             </li>
@@ -151,8 +151,8 @@
                 <h3>ユーザービリティ＆アクセシビリティ<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>Web業界の仕事の進め方に沿ってチーム制作で学習し、Web制作におけるユーザビリティ、
-                        アクセシビリティ観点から既存サイトの問題点を洗い出し、改善提案を学習する、
-                        さらに、ユーザー中心設計に基づいたデザイン手法を使って課題解決を行い、サービスをクライアント企業に提案することを目的とする。<br>
+                        アクセシビリティ観点から既存サイトの問題点を洗い出し、改善提案を学習します、
+                        さらに、ユーザー中心設計に基づいたデザイン手法を使って課題解決を行い、サービスをクライアント企業に提案することを目的とします。<br>
                         <br>
                         １.ユーザビリティ、アクセシビリティ観点から既存サイトの問題点を洗い出し、改善提案ができる。 <br>
                         ２.ユーザー中心設計に基づいたデザイン手法を使って、課題解決を行い、チームでサービス提案ができる。<br>
@@ -165,7 +165,7 @@
                 <ul>
                     <li><p>Webサービスとはインターネット上で提供されるサービス全般を指す言葉です。<br>
                         <br>
-                        Webサービスの運用に必要な知識と、実務で用いられる解析ツールを使った改善運用ができる人材になることを目的とする。<br>
+                        Webサービスの運用に必要な知識と、実務で用いられる解析ツールを使った改善運用ができる人材になることを目的とします。<br>
                         <br>
                         Webサービスの運用で求められる考え方を理解し、目標に対して改善方法を提案し、実践できる。 そしてGoogle Analytics個人認定資格初級合格。</p></li>
                     <li><img src="img/webserver01.jpg" alt="web workers"></li>
@@ -175,9 +175,9 @@
                 <h3>Webマーケティング<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>モノを売るための仕組みである「マーケティング」の基本と実際を正しく理解することにより、
-                        Webページ依頼主の要望に的確に対応出来るなど、実務に活かせる知識や考え方を身に着ける。<br>
+                        Webページ依頼主の要望に的確に対応出来るなど、実務に活かせる知識や考え方を身に着けます。<br>
                         <br>
-                        マーケティングの基本が説明できる。マーケティングの考え方をベースにWebページ企画が出来る。 
+                        マーケティングの基本が説明できる。マーケティングの考え方をベースにWebページ企画が出来ます。 
                         マーケティングの考え方の中で「コミュニケーション」の役割が説明出来る。</p></li>
                     <li><img src="img/marketing01.jpg" alt="marketing planing"></li>
                 </ul>
@@ -185,10 +185,10 @@
             <li class="container_of_class">
                 <h3>関連法規<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
-                    <li><p>知的財産権、実務における契約行為の基本的な考え方を理解することを目的とする。<br>
+                    <li><p>知的財産権、実務における契約行為の基本的な考え方を理解することを目的としまう。<br>
                         <br>
                         著作権を中心とした知的財産権の知識だけでなく、文化としての理解を深めることでコンテンツ制作者としての姿勢と、
-                        契約という法律行為による自身の身の守り方を身につけ、実務の中で適切な行動がとれるようにする。</p></li>
+                        契約という法律行為による自身の身の守り方を身につけ、実務の中で適切な行動がとれるようにします。</p></li>
                     <li><img src="img/law01.jpg" alt="law and the hammer"></li>
                 </ul>
             </li>
@@ -196,10 +196,10 @@
                 <h3 class="last">卒業制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>2年間の学習の中から得られた技術をベースに、
-                        各自で研究課題を設定しクライアント獲得の営業をしながらサイト制作やアプリケーションなどの制作を行う。<br>
-                        クライアントへのヒアリングからスケジュール管理、各種ドキュメント制作などディレクションができることを目的とする。<br>
+                        各自で研究課題を設定しクライアント獲得の営業をしながらサイト制作やアプリケーションなどの制作を行います。<br>
+                        クライアントへのヒアリングからスケジュール管理、各種ドキュメント制作などディレクションができることを目的とします。<br>
                         <br>
-                        テーマの設定、企画提案、制作、プレゼンテーションの一連のワークフローを管理・運用できるようになる。また、制作した作品を納品することができる。</p></li>
+                        テーマの設定、企画提案、制作、プレゼンテーションの一連のワークフローを管理・運用できるようになる。また、制作した作品を納品することができます。</p></li>
                     <li><img src="img/DSC_0017.JPG" alt="卒業展示会の様子"></li>
                 </ul>
             </li>
