--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <main>
       <section class="KV">
         <div class="key_v">
-          <h1 class="title01">Webデザインを楽しむ</h1>
+          <h1 class="title01">Webデザインを学ぶ</h1>
           <h1 class="title02">心構えができる</h1>
-          <h1 class="title03">迷わずに進む</h1>
+          <!-- <h1 class="title03">迷わずに進む</h1> -->
         </div>
 
         <div class="down_arrow">
