--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
             <li><a href="curricula_first.html">一年授業</a></li>
             <li><a href="curricula_second.html">二年授業</a></li>
             <li>
-              <a href="#" onclick="window.open('test.html', '心構え診断')"
-                >心構え診断</a
+              <a
+                href="#"
+                onclick="window.open('test.html', '入学準備診断テスト')"
+                >入学準備診断テスト</a
               >
             </li>
           </ul>
@@ -113,11 +115,11 @@
           <a
             href="#"
             class="content_link test_link"
-            onclick="window.open('test.html', '心構え診断')"
-            >心構え診断</a
+            onclick="window.open('test.html', '入学準備診断テスト')"
+            >入学準備診断テスト</a
           >
 
-          <p>プチ診断で確かめよう！！</p>
+          <p><strong>プチゲームで確かめよう！！</strong></p>
         </section>
       </section>
     </main>
@@ -130,8 +132,8 @@
           <a href="https://www.jec.ac.jp/inquiry/"><p>▶︎お問い合わせ</p></a>
         </div>
         <div class="footer_link_a link02">
-          <a href="#" onclick="window.open('test.html', '心構え診断')"
-            ><p>▶︎心構え診断</p></a
+          <a href="#" onclick="window.open('test.html', '入学準備診断テスト')"
+            ><p>▶︎入学準備診断テスト</p></a
           >
           <a href="curricula_second.html"><p>▶︎二年授業</p></a>
           <a href="https://www.jec.ac.jp/request/"><p>▶︎資料取得</p></a>
