--- a/test.html
+++ b/test.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="CSS/reset/reset.css" />
     <link rel="stylesheet" href="CSS/testCSS/test.css" />
     <link rel="icon" type="image/svg" href="img/学科LOGO-04.svg" />
-    <title>心構え診断｜心構えができる！｜日本電子専門学校</title>
+    <title>▶入学準備診断テスト｜心構えができる！｜日本電子専門学校</title>
   </head>
   <body>
     <section class="test_body">
       <div class="frame">
         <div class="container">
           <div class="first_page">
-            <h1>Webデザイン科<br />心構え診断</h1>
+            <h1>知っておこう！<br />Webデザイン科</h1>
             <div class="block"></div>
             <div class="content_start">
               <div class="start_word">
@@ -43,7 +43,6 @@
       <div class="test">
         <h1>Webデザイン科<br />心構え診断</h1>
         <div class="block"></div>
-        <p class="counter">1/20</p>
         <div class="test_content">
           <div class="quiz_title"></div>
 
@@ -53,6 +52,7 @@
             <button class="yes">はい</button>
             <button class="no">いいえ</button>
             <button class="pass">わからない</button>
+            <p class="counter">1/20</p>
           </div>
         </div>
       </div>
