一回修正終わった

--- a/content_intro.html
+++ b/content_intro.html
@@ -38,8 +38,8 @@
             <li>
               <a
                 href="#"
-                onclick="window.open('test.html', '知っておこう！Webデザイン科')"
-                >知っておこう！Webデザイン科</a
+                onclick="window.open('test.html', '入学準備診断テスト')"
+                >入学準備診断テスト</a
               >
             </li>
           </ul>
@@ -122,10 +122,8 @@
       <section class="content test_lead">
         <h3>Webデザイン科で学ぶための心構えを試してみよう！</h3>
 
-        <a
-          href="#"
-          onclick="window.open('test.html', '知っておこう！Webデザイン科')"
-          >知っておこう！Webデザイン科</a
+        <a href="#" onclick="window.open('test.html', '入学準備診断テスト')"
+          >入学準備診断テスト</a
         >
 
         <p>
@@ -148,8 +146,8 @@
           <a href="https://www.jec.ac.jp/inquiry/"><p>▶︎お問い合わせ</p></a>
         </div>
         <div class="footer_link_a link02">
-          <a href="#" onclick="window.open('test.html', '心構え診断')"
-            ><p>▶︎知っておこう！</p></a
+          <a href="#" onclick="window.open('test.html', '入学準備診断テスト')"
+            ><p>▶︎入学準備診断テスト</p></a
           >
           <a href="curricula_second.html"><p>▶︎二年授業</p></a>
           <a href="https://www.jec.ac.jp/request/"><p>▶︎資料取得</p></a>
