一回修正終わった

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
       <div class="frame">
         <div class="container">
           <div class="first_page">
-            <h1>知っておこう！<br />Webデザイン科</h1>
+            <h1>入学準備診断テスト</h1>
             <div class="block"></div>
             <div class="content_start">
               <div class="start_word">
@@ -41,7 +41,7 @@
       </div>
 
       <div class="test">
-        <h1>Webデザイン科<br />心構え診断</h1>
+        <h1>入学準備診断テスト</h1>
         <div class="block"></div>
         <div class="test_content">
           <div class="quiz_title"></div>
@@ -58,7 +58,7 @@
       </div>
 
       <div class="score_page">
-        <h1>Webデザイン科<br />心構え診断</h1>
+        <h1>入学準備診断テスト</h1>
         <div class="rank"></div>
         <div class="commend"></div>
         <div class="rank_btn">
