--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             >入学準備診断テスト</a
           >
 
-          <p><strong>プチゲームで確かめよう！！</strong></p>
+          <p><strong>プチテストで確かめよう！！</strong></p>
         </section>
       </section>
     </main>
