--- a/test.html
+++ b/test.html
@@ -63,6 +63,14 @@
         <div class="commend"></div>
         <div class="rank_btn">
           <button
+            class="opencampus"
+            type="button"
+            name="オープンキャンパス"
+            onclick="window.open('https://www.jec.ac.jp/event/oc/', 'オープンキャンパス')"
+          >
+            オープンキャンパス
+          </button>
+          <button
             class="top"
             type="button"
             name="Back To Top"
