--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="CSS/reset/reset.css" />
     <link rel="stylesheet" href="CSS/testCSS/test.css" />
     <link rel="icon" type="image/svg" href="img/学科LOGO-04.svg" />
-    <title>▶入学準備診断テスト｜心構えができる！｜日本電子専門学校</title>
+    <title>入学準備診断テスト｜心構えができる！｜日本電子専門学校</title>
   </head>
   <body>
     <section class="test_body">
@@ -27,7 +27,7 @@
                 <p>
                   この自己診断でWebデザイン科と自分の適応度をは測ってみよう！<br /><span
                     class="all_question"
-                    >ー全20問ー</span
+                    >ー全10問ー</span
                   >
                 </p>
               </div>
